--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,18 +1,23 @@
-<ion-navbar>
-    <ion-title>PongMasterRace</ion-title>
+<ion-navbar *navbar>
+    <button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Pong Master Race</ion-title>
 </ion-navbar>
+
 <ion-content [root]="homeRoot">
     <ion-list>
         <ion-list-header>
             Últimos partidos
         </ion-list-header>
-        <ion-item *ngFor="#game of games">
+        <ion-card padding *ngFor="#game of games">
             <h2>{{game.player1}} vs {{game.player2}}</h2>
             <h2>{{game.p1Score}} - {{game.p2Score}}</h2>
-        </ion-item>
+        </ion-card>
     </ion-list>
     <ion-infinite-scroll (infinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll>
-    <button fab fab-center fab-bottom [navPush]="addPage"><ion-icon name="add"></ion-icon></button>
+    <button fab fab-center fab-bottom [navPush]="addPage" *ngIf="auth"><ion-icon name="add"></ion-icon></button>
+    <button full *ngIf="!auth" (click)="login()">Google Login</button>
 </ion-content>
