Added user schema. Improved add screen

--- a/app/app.html
+++ b/app/app.html
@@ -1,5 +1,5 @@
 ﻿<ion-menu [content]="content">
-    <ion-toolbar>
+    <ion-toolbar primary>
         <ion-title>GeeksHubs</ion-title>
     </ion-toolbar>
     <ion-content>
