--- a/app/pages/add/add.html
+++ b/app/pages/add/add.html
@@ -1,4 +1,4 @@
-<ion-navbar>
+<ion-navbar primary>
     <ion-title>Añade tu partido</ion-title>
 </ion-navbar>
 <ion-content padding>
@@ -10,17 +10,19 @@
         <ion-card-content>
             <ion-item>
                 <ion-label>Player 1</ion-label>
-                <ion-input #player1 type="text"></ion-input>
+                <ion-label>{{auth.google.displayName}}</ion-label>
             </ion-item>
             <ion-item>
                 <ion-label>Player 2</ion-label>
-                <ion-input #player2 type="text"></ion-input>
+                <ion-select [(ngModel)]="player2" interface="action-sheet">
+                    <ion-option *ngFor="#user of users" value="{{user}}">{{user}}</ion-option>
+                </ion-select>
             </ion-item>
             <ion-item>
                 <ion-label>Resultado</ion-label>
                 <ion-input #p1score type="number"></ion-input><ion-input #p2score type="number"></ion-input>
             </ion-item>
-            <button full (click)="addGame(player1.value, player2.value, p1score.value, p2score.value)">Aceptar</button>
+            <button full (click)="addGame(p1score.value, p2score.value)">Aceptar</button>
         </ion-card-content>
 
     </ion-card>
