--- a/app/pages/add/add.html
+++ b/app/pages/add/add.html
@@ -9,7 +9,7 @@
 
         <ion-card-content>
             <ion-item>
-                <ion-label style="margin-left: 16px">{{auth.google.displayName}}</ion-label>
+                <ion-label style="margin-left: 16px">{{user}}</ion-label>
             </ion-item>
             <ion-item>
                 <ion-select [(ngModel)]="player2" style="width: 100%; max-width: 100%">
