Updated db structure

--- a/app/pages/add/add.html
+++ b/app/pages/add/add.html
@@ -13,7 +13,7 @@
             </ion-item>
             <ion-item>
                 <ion-select [(ngModel)]="player2" style="width: 100%; max-width: 100%">
-                    <ion-option *ngFor="#user of users" value="{{user.key}}">{{user.name}}</ion-option>
+                    <ion-option *ngFor="#user of users" value="{{user.uid}}">{{user.name}}</ion-option>
                 </ion-select>
             </ion-item>
             <ion-item>
